2010-04-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Give it a doc string.

	* minibuffer.el (completion-at-point): Doc fix.

2010-04-18  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/pmake.el (ede-proj-makefile-insert-variables): Don't
	destroy list before using it.

2010-04-17  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix the version number for added files.
	* vc-hg.el (vc-hg-working-revision): Check if the file is
	registered after hg parent fails (Bug#5961).

2010-04-17  Glenn Morris  <rgm@gnu.org>

	* htmlfontify.el (htmlfontify-buffer)
	(htmlfontify-copy-and-link-dir): Autoload entry points.

2010-04-17  Magnus Henoch  <magnus.henoch@gmail.com>

	* vc-hg.el (vc-hg-annotate-extract-revision-at-line): Expand file
	name relative to the project root (Bug#5960).

2010-04-16  Glenn Morris  <rgm@gnu.org>

	* vc-git.el (vc-git-print-log): Doc fix.

2010-04-14  Óscar Fuentes  <ofv@wanadoo.es>

	* ido.el (ido-file-internal): Fix 2009-12-02 change.

2010-04-14  Christoph  <cschol2112@googlemail.com>  (tiny change)

	* progmodes/grep.el (grep-compute-defaults): Fix handling of host
	default settings (Bug#5928).

2010-04-10  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-match-and-skip-declaration):
	New function.
	(fortran-font-lock-keywords-3): Use it.  (Bug#1385)

2010-04-07  Kenichi Handa  <handa@m17n.org>

	* language/indian.el (malayalam-composable-pattern): Fix previous
	change (add U+0D4D "SIGN VIRAMA").
	(oriya-composable-pattern): Add U+0B30 and fix typo in the regexp.
	(tamil-composable-pattern): Fix typo in the regexp.
	(telugu-composable-pattern): Fix U+0C4D and typo in the regexp.
	(kannada-composable-pattern): Fix U+0CB0 and typo in the regexp.
	(malayalam-composable-pattern): Fix U+0D4D and typo in the regexp.

2010-04-06  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/tex-mode.el (latex-mode): Revert 2008-03-03 change to
	paragraph-separate (Bug#5821).

2010-04-05  Juri Linkov  <juri@jurta.org>
